# uboonedaq_datatypes

./: CMakeLists.txt
datatypes/: CMakeLists.txt  boostSerialization.h  empty_trailer.cpp  empty_trailer.h  raw_data_access.h  releaseInfo.h  ub_CrateHeader_v6.cpp  ub_CrateHeader_v6.h  ub_EventHeaderTrailer_v0.cpp  ub_MarkedRawChannelData.h  ub_PMT_CardData_v6.cpp  ub_PMT_CardData_v6.h  ub_PMT_CrateData_v6.h  ub_PMT_WindowData_v6.cpp  ub_TPC_CardData_v6.h  ub_TPC_CardHeader_v6.cpp  ub_TPC_ChannelHeaderTrailer_v0.h  ub_TPC_CrateData_v6.h  ub_TPC_SN_ChannelDataCreatorHelperClass.cpp  ub_TPC_SN_ChannelData_v6.cpp  ub_TPC_SN_ChannelData_v6.h  ub_TPC_SN_ChannelHeaderTrailer_v0.h  ub_TriggerBoardClock.cpp  ub_TriggerCounter.cpp  ub_Trigger_CrateData_v6.cpp  ub_XMITEventHeaderTrailer_v0.cpp  uboone_data_fragment_metadata.cpp  uboone_data_fragment_metadata.h  uboone_data_internals.h  uboone_data_utils.cpp  uboone_data_utils.h  uboone_data_utils_openmp.cpp  uboone_data_v6_headers.h
datatypes_utilities/: CMakeLists.txt  fragmentReader.cc
doc/: README.txt
projects/: CMakeLists.txt  datatypes.kdev4
projects/.kdev4/: datatypes.kdev4  datatypes.kdev4a
projects/datatypes/: CMakeLists.txt  CMakeLists.txt~  basic_types.h  beamData.h  binary_file_reader.cpp  boonetypes.h  boostSerialization.h  cardData.cpp  cardData.h  cardDataPMT.cpp  cardDataPMT.h  cardHeader.cpp  cardHeader.h  cardHeaderPMT.cpp  cardHeaderPMT.h  channelData.cpp  channelData.h  channelDataPMT.h  constants.h  crateData.cpp  crateData.h  crateDataPMT.cpp  crateDataPMT.h  crateHeader.h  empty_header.cpp  empty_header.h  empty_trailer.cpp  empty_trailer.h  eventRecord.cpp  eventRecord.h  evttypes.h  globalHeader.h  gps.cpp  gps.h  main.cc  main.cpp  raw_data_access.h  releaseInfo.h  triggerData.cpp  triggerData.h  (+132 more)
projects/datatypes_utilities/: .kdev_include_paths  CMakeLists.txt  card_utilities.cpp  card_utilities.h  dumpEventHeaders.cc  dumpEvents.cc  dumpRawPMTCrateFrame.cc  dumpRawTPCCrateFrame.cc  eventReader.cc  exportRawFragments.cc  fragmentReader.cc
projects/gps/: CMakeLists.txt
projects/share/: .kdev_include_paths  CMakeLists.txt  QuickVec.hh  boonetypes.h  event_types.cpp  gangliaMetrics.h
projects/tools/: helper_functions.sh
projects/unused/: beamData.cpp  beamHeader.cpp  beamHeader.h  boonetypes.h  crateHeader.h  eventRecord.cpp
projects/ups/: product-config.cmake.in  product_deps  setup_for_development
share/: CMakeLists.txt
ups/: product_deps
